# directors-cut-rpg-discord-bot

./: .env.example  Dockerfile  LICENSE  README.md  bot.py  controller.py  message.py  privacy.md  pyproject.toml  requirements.txt  roll.py  terms.md
bot/: bot.py  channel_settings.py  config.py  controller.py  dice.py  message.py  roll.py
tests/: test_roll.py
